# vibevoice-app-glm51

./: .gitignore  README.md  metrics.md  operations-log.md  pyproject.toml
app/: __init__.py  main.py
app/api/: asr.py  tts.py
app/core/: config.py
app/models/: schemas.py
app/services/: asr.py  tts.py
tests/: __init__.py  test_api.py  test_imports.py  test_services.py
